--- a/wip/web-player/package.json
+++ b/wip/web-player/package.json
@@ -12,15 +12,25 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "check": "npm run type-check && npm run lint"
   },
-  "keywords": ["E-RTMP", "E-FLV", "player"],
+  "keywords": [
+    "E-RTMP",
+    "E-FLV",
+    "player"
+  ],
   "author": "Slavik Lozben",
   "license": "Apache-2.0",
   "type": "module",
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.4"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2.8",
+    "eventemitter3": "^5.0.1",
+    "webworkify-webpack": "^2.1.5"
   }
 }
