--- a/wip/web-player/tsconfig.json
+++ b/wip/web-player/tsconfig.json
@@ -3,9 +3,8 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
-    "composite": true,                                   /* Enable constraints that allow a TypeScript project to be used with project references. */
-    // "tsBuildInfoFile": "./.tsbuildinfo",              /* Specify the path to .tsbuildinfo incremental compilation file. */
+    "composite": false,                                  /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "tsBuildInfoFile": "./build/tsconfig.tsbuildinfo",   /* Specify the path to .tsbuildinfo incremental compilation file. */
     // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects. */
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
@@ -26,11 +25,11 @@
     "moduleDetection": "force",
 
     /* Modules */
-    "module": "ES2022",                                /* Specify what module code is generated. */
+    "module": "ES2022",                                  /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "bundler",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": ".",                                     /* Specify the base directory to resolve non-relative module names. */
-    "paths": {                                          /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "baseUrl": ".",                                      /* Specify the base directory to resolve non-relative module names. */
+    "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
       "@/*": ["src/*"]
     },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -61,7 +60,7 @@
     "inlineSourceMap": false,                            /* Include sourcemap files inside the emitted JavaScript. */
     "noEmit": true,                                      /* Disable emitting files from a compilation. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    // "outDir": "./",                                   /* Specify an output folder for all emitted files. */
+    "outDir": "./build",                                 /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -116,6 +115,8 @@
     "src"
   ],
   "exclude": [
-    "node_modules"
-  ],
+    "node_modules",
+    "build",
+    "src/mux-lib"
+  ]
 }
