chore: add __VERSION__ to build system

--- a/wip/web-player/package.json
+++ b/wip/web-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-player",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Web-based E-FLV player",
   "main": "index.js",
   
